--- a/config/database.yml
+++ b/config/database.yml
@@ -17,11 +17,11 @@
 development:
   adapter: mysql
   encoding: utf8
-  database: Alpha_development
+  database: alpha
   pool: 5
   username: root
   password:
-  socket: /tmp/mysql.sock
+  socket: /var/run/mysqld/mysqld.sock
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
